Enhance PropertyController and PropertyService tests
- Refactored PropertyControllerTest to use MockMvc for testing HTTP endpoints, improving test structure and readability.
- Added new tests for handling invalid property creation and searching with various parameters in PropertyControllerTest.
- Expanded PropertyServiceImplTest with additional validation tests for property creation and searching, ensuring robust error handling for invalid inputs.
- Improved test coverage for edge cases, including negative prices, zero values, and invalid address patterns.